# lipstyk

./: .gitignore  .lipstyk.toml  .pre-commit-hooks.yaml  AGENTS.md  Cargo.toml  INTEGRATION.md  LICENSE  README.md  RULES.md  manifest.toml
.github/workflows/: ci.yml  lipstyk.yml  release.yml
dogfood-reports/: README.md  aicd-bench-2026-04-25.md  self-2026-04-25.json  self-2026-04-25.md
src/: agent.rs  config.rs  cross_file.rs  diagnostic.rs  diff.rs  extension.rs  lib.rs  lint.rs  lsp.rs  main.rs  oxc.rs  prose.rs  render.rs  report.rs  sarif.rs  source_rule.rs  treesitter.rs  walk.rs
src/common/: comment_analysis.rs  comment_density.rs  mod.rs  naming.rs  whitespace.rs
src/devops/: ci.rs  kubernetes.rs  mod.rs
src/docker/: best_practices.rs  mod.rs
src/golang/: antipatterns.rs  ast.rs  comment_depth.rs  error_handling.rs  generic_naming.rs  mod.rs  naming_entropy.rs  nesting_depth.rs  restating_comments.rs  structural_repetition.rs
src/html/: accessibility.rs  css_smells.rs  div_soup.rs  generic_classes.rs  inline_styles.rs  missing_semantics.rs  mod.rs  parse.rs
src/java/: bare_catch.rs  comment_depth.rs  generic_naming.rs  mod.rs  restating_comments.rs
src/markdown/: mod.rs  placeholders.rs  slop_phrases.rs  structure.rs
src/python/: bare_except.rs  comment_depth.rs  error_handling.rs  generic_naming.rs  import_star.rs  index_loop.rs  mod.rs  mutable_default.rs  print_debug.rs  restating_comments.rs  trivial_wrapper.rs  type_hint_gaps.rs  whitespace_uniformity.rs
src/rules/: boxed_error.rs  comment_clustering.rs  dead_code_markers.rs  derive_stacking.rs  error_swallowing.rs  generic_naming.rs  generic_todo.rs  index_loop.rs  mod.rs  naming_entropy.rs  needless_lifetimes.rs  needless_type_annotation.rs  over_documentation.rs  pub_overuse.rs  redundant_clone.rs  restating_comments.rs  string_params.rs  structural_repetition.rs  trivial_wrapper.rs  unwrap_overuse.rs  verbose_match.rs  whitespace_uniformity.rs
src/shell/: antipatterns.rs  mod.rs  quoting.rs  strict_mode.rs
src/ts/: any_abuse.rs  comment_depth.rs  console_dump.rs  error_handling.rs  fixed_delay_sync.rs  generic_naming.rs  mod.rs  naming_entropy.rs  nested_ternary.rs  nesting_depth.rs  promise_antipattern.rs  redundant_async.rs  restating_comments.rs  structural_repetition.rs  trivial_wrapper.rs  whitespace_uniformity.rs
tests/: cli.rs  rules.rs
tests/fixtures/: sloppy.go  sloppy.html  sloppy.py  sloppy.rs  sloppy.ts  with_tests.rs
